# tech-challenge-fase1

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  startup.txt
.azure/: config
docs/: ML_CANVAS.md  MODEL_CARD.md  MONITORING.md
models/: mlp_churn.pt
notebooks/: 01_eda.ipynb  02_baselines.ipynb  03_mlp_pytorch.ipynb
src/api/: main.py  schemas.py
src/data/: preprocessing.py
src/models/: mlp.py  train.py
src/utils/: logger.py
tests/: test_model.py
