[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tech-challenge-fase1"
version = "0.1.0"
description = "Previsão de Churn com MLP PyTorch - FIAP Tech Challenge"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scikit-learn>=1.3",
    "torch>=2.0",
    "mlflow>=2.10",
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.3",
    "jupyter>=1.0",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 120
target-version = "py39"
exclude = ["notebooks/"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]